--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
                 between your devices so you can access them on the go</p>
         </div>
         <!-- heading-end -->
-        <!-- feature1 start -->
+        <!-- feature start -->
+        <!-- feature1 -->
         <div class="containerdiv">
             <div class="left">
                 <div class="image2"><img src="images/illustration-features-tab-1-239a78af.png" alt=""></div>
-                <div class="rectangle2"></div>
+                <!-- <div class="rectangle2"></div> -->
             </div>
             <div class="oneclick">
                 <h2>
@@ -73,15 +74,126 @@
         </div>
         <!-- feature1 end -->
         <!-- feature2 start -->
-        <div class="containerdiv2">
-            <div>
-                <h2>
-                    Bookmark in one click
-                </h2>
+        <div class="main">
+            <div class="containerdiv">
+
+                <div class="oneclick , Intelligent">
+                    <h2>
+                        Intelligent search
+                    </h2>
+                    <p>
+                        Our powerful search feature will help you find saved sites in no time at all. No need to crawl
+                        through all of your bookmarks.
+                    </p>
+                    <div class="btndiv"><button class="btn2">More Info</button></div>
+                </div>
+                <div class="left">
+                    <div class="image3"><img src="images/illustration-features-tab-2-7cbb0898.png" alt=""></div>
+                    <!-- <div class="rectangle2"></div> -->
+                </div>
             </div>
-            <div></div>
+        </div>
+        <div class="containerdiv">
+            <div class="left">
+                <div class="image2"><img src="images/illustration-features-tab-3-6a73db39.png" alt="" id="image4"></div>
+                <!-- <div class="rectangle2"></div> -->
+            </div>
+            <div class="oneclick">
+                <h2>
+                    Share your bookmarks
+                </h2>
+                <p>
+                    Easily share your bookmarks and collections with others. Create a shareable link that you can send
+                    at the click of a button.
+                </p>
+                <div class="btndiv"><button class="btn2">More Info</button></div>
+            </div>
+        </div>
 
+    </section>
+    <!-- extentions -->
+    <section class="extentions">
 
+        <div class="heading oneclick" >
+            <h2>
+                Download the extensions
+            </h2>
+            <p>We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
+        </div>
+        <!-- cards -->
+        <div class="outer">
+            <div class="card-container">
+                <!-- card-1 -->
+                <div class="c1">
+                    <div class="chrome">
+                        <img src="images/logo-chrome-aa97d7b0.svg" alt="">
+                        <h3>Add To Chrome</h3>
+                        <p>Minimum version 62</p>
+                    </div>
+                    <hr>
+                    <div class="button">
+                        <button>Add and Install extensions</button>
+                    </div>
+                   
+                </div>
+                <!-- card-2 -->
+                <div class="c2 c1">
+                    <div class="firefox chrome">
+                        <img src="images/logo-firefox-0989e128.svg" alt="">
+                        <h3>Add To Firefox</h3>
+                        <p>Minimum version 62</p>
+                    </div>
+                    <hr>
+                    <div class="button">
+                        <button>Add and Install extensions</button>
+                    </div>
+                </div>
+                <div class="c2 c1 c3">
+                    <div class="firefox chrome opera">
+                        <img src="images/logo-opera-dd5601d3.svg" alt="">
+                        <h3>Add To Opera</h3>
+                        <p>Minimum version 62</p>
+                    </div>
+                    <hr>
+                    <div class="button">
+                        <button>Add and Install extensions</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- extension end -->
+    <!-- FAQs -->
+    <section class="question-section">
+        <div class="holder ">
+            <div class="head">
+                <h2>Frequently Asked Questions</h2>
+                <p>Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
+            </div>
+            <div class="questions">
+                <div id="questions">
+                    <p>What is a bookmark?</p>
+                    <div class="icon"></div>
+                </div>
+                <hr>
+                <div id="questions">
+                    <p>Is there a mobile app?</p>
+                    <div class="icon"></div>
+                </div>
+                <hr>
+                <div id="questions">
+                    <p>How can i request a new browser?</p>
+                    <div class="icon"></div>
+                </div>
+                <hr>
+                <div id="questions">
+                    <p>Waht about other Chrome browsers</p>
+                    <div class="icon"></div>
+                </div>
+                <hr>
+                <div class="btndiv btn3"><button class="btn2 btn3">More Info</button></div>
+            </div>
         </div>
     </section>
 
