--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -114,11 +117,12 @@
     <!-- extentions -->
     <section class="extentions">
 
-        <div class="heading oneclick" >
+        <div class="heading oneclick">
             <h2>
                 Download the extensions
             </h2>
-            <p>We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
+            <p>We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to
+                prioritize.</p>
         </div>
         <!-- cards -->
         <div class="outer">
@@ -134,7 +138,7 @@
                     <div class="button">
                         <button>Add and Install extensions</button>
                     </div>
-                   
+
                 </div>
                 <!-- card-2 -->
                 <div class="c2 c1">
@@ -169,31 +173,57 @@
         <div class="holder ">
             <div class="head">
                 <h2>Frequently Asked Questions</h2>
-                <p>Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
+                <p>Here are some of our FAQs. If you have any other questions you’d like answered please feel free to
+                    email us.</p>
             </div>
             <div class="questions">
                 <div id="questions">
                     <p>What is a bookmark?</p>
-                    <div class="icon"></div>
+                    <div class="icon"><i class="fa-solid fa-angle-down" style="color: #818283;"></i></div>
                 </div>
                 <hr>
                 <div id="questions">
                     <p>Is there a mobile app?</p>
-                    <div class="icon"></div>
+                    <div class="icon"><i class="fa-solid fa-angle-down" style="color: #818283;"></i></div>
                 </div>
                 <hr>
                 <div id="questions">
                     <p>How can i request a new browser?</p>
-                    <div class="icon"></div>
+                    <div class="icon"><i class="fa-solid fa-angle-down" style="color: #818283;"></i></div>
                 </div>
                 <hr>
                 <div id="questions">
                     <p>Waht about other Chrome browsers</p>
-                    <div class="icon"></div>
+                    <div class="icon"><i class="fa-solid fa-angle-down" style="color: #818283;"></i></div>
                 </div>
                 <hr>
                 <div class="btndiv btn3"><button class="btn2 btn3">More Info</button></div>
             </div>
+        </div>
+    </section>
+    <section class="footer">
+        <p id="p1">35,000+ ALREADY JOINED</p>
+        <p id="p2">Stay up-to-date with what we’re doing</p>
+        <div class="email">
+            <input type="email" id="email" placeholder="Enter Your Email Address">
+            <input type="button" id="button" value="Contact Us">
+
+        </div>
+    </section>
+    <section class="last">
+        <div id="last">
+            <div class="logo">
+                <img src="images/logo-bookmark-a4fb5feb.svg" alt="">
+            </div>
+            <div class="list">
+                <li>FEATURE</li>
+                <li>PRICING</li>
+                <li>CONTACT</li>
+            </div>
+        </div>
+        <div class="lasticons">
+            <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+            <i class="fa-brands fa-facebook" style="color: #fcfcfc;"></i>
         </div>
     </section>
 
